[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "JaxTools"
version = "0.0.1"
authors = [
  { name="Rayaan khan", email="rayaanstudent@gmail.com" },
]
description = "A small object module"
readme = "README.md"
requires-python = ">=3.7.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: ",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/MMXXII2022/Jax-tools/"
"Bug Tracker" = "https://github.com/MMXXII2022/Jax-tools/issues"